--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,1 +1,21 @@
-name: 
+name: "test"
+
+on:
+ push:
+ pull_request:
+
+jobs:
+  build:
+    runs-on: ubuntu:latest
+    steps:
+      - name: Setup Checkout
+        uses: actions/checkout@v4.1.1
+      - name: Setup .NET
+        uses: actions/setup-dotnet@4.0.0
+        with:
+          dotnet-version: 8.0.x
+      - name: Project Build
+        run: dotnet build ./test.sln 
+      - name: Project Test
+        run: dotnet test ./test.sln 
+      
