--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: "test"
 
 on:
@@ -10,21 +7,36 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Setup Checkout
+      # Шаг 1: Клонирование репозитория
+      - name: Checkout Code
         uses: actions/checkout@v4
+
+      # Шаг 2: Установка .NET SDK
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+
+      # Шаг 3: Кэширование NuGet-пакетов
       - name: Cache NuGet packages
         uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj', '**/global.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
+
+      # Шаг 4: Восстановление зависимостей
+      - name: Restore Dependencies
+        run: dotnet restore ./test.sln
+
+      # Шаг 5: Сборка проекта
       - name: Build Project
         run: dotnet build ./test.sln --no-restore
+
+      # Шаг 6: Запуск тестов
       - name: Run Tests
         run: dotnet test ./test.sln --no-build
+
