--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,23 +7,35 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Setup Checkout
+      # Шаг 1: Клонирование репозитория
+      - name: Checkout Code
         uses: actions/checkout@v4
+
+      # Шаг 2: Установка .NET SDK
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+
+      # Шаг 3: Кэширование NuGet-пакетов
       - name: Cache NuGet packages
         uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj', '**/global.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
+
+      # Шаг 4: Восстановление зависимостей
+      - name: Restore Dependencies
+        run: dotnet restore ./test.sln
+
+      # Шаг 5: Сборка проекта
       - name: Build Project
         run: dotnet build ./test.sln --no-restore
-      - name: Run Tests
-        run: dotnet test ./test.sln --no-build
 
-      
+      # Шаг 6: Запуск тестов
+      - name: Run Tests
+        run: dotnet test ./test.sln --no-build 
