--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,10 @@ jobs:
       # Шаг 6: Запуск тестов
       - name: Run Tests
         run: dotnet test ./test.sln --no-build 
+
+      - name: "telegram Notification"
+        uses: "appleboy/telegram-action@master" 
+        with:
+          to: ${(secrets. TELEGRAM_BOT_ID)}
+          token: ${(secrets.TELEGRAM_TOKEN)}
+          args: New version publish
