--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,17 +13,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Log Telegram Token and Chat ID
-        run: |
-          echo "Telegram Token: ${{ secrets.TELEGRAM_TOKEN }}"
-          echo "Telegram Chat ID: ${{ secrets.TELEGRAM_CHAT_ID }}"
-
-      - name: Run tests
-        run: dotnet test
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-
       # Шаг 2: Установка .NET SDK
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -49,7 +38,10 @@ jobs:
 
       # Шаг 6: Запуск тестов
       - name: Run Tests
-        run: dotnet test ./test.sln 
+        run: dotnet test ./test.sln --no-build
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
       # Шаг 7: Уведомление Telegram об успешной сборке
       - name: Telegram Notification (Success)
