--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.4'
 
 services:
   test:
-    container_name: test
-    image: test:latest
+    container_name: api
+    image: api:latest
     build:
       context: .
-      dockerfile: test/Dockerfile
+      dockerfile: EComputer/Dockerfile
     depends_on:
       - redis
       - database
